resources/tests/invalid_syntax/binary_type_operator.ct
//`Type 'mut float' does not support operator '&'!
//1
fn main()->i64 {  
  100.0f & 10.0f;
}